--- a/css/Arabic.css
+++ b/css/Arabic.css
@@ -23,7 +23,8 @@ div#navbarSupportedContent,
 section.icons-placeholder,
 .col-sm-12,
 .sub-head,
-.space{
+.space,
+.about-us-our{
     direction: ltr !important;
 }
 
@@ -144,6 +145,14 @@ div#carouselExampleControlsNoTouching {
 }
 
 /* section Grid five page home and page home after login */
+
+#aboutusour{
+    margin-right: 2.5%;
+}
+
+.section-clintes-servies-taxi{
+    margin-right: 2.5%;
+}
 @media screen and (max-width:1866px) and (min-width: 1760px){
     .cars-list,
     .cars-lists{
