--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,6 @@ h6 {
 }
 
 svg.svg-inline--fa.fa-key,
-svg.svg-inline--fa.fa-handshake,
 svg.svg-inline--fa.fa-star,
 svg.svg-inline--fa.fa-person-chalkboard {
   font-size: 30px;
@@ -202,11 +201,12 @@ ol {
 }
 
 p {
-  font-size: 15px;
+  font-size: 18px;
+  font-weight: 700;
   line-height: 30px;
   margin: 0;
   font-weight: 400;
-  color: #666;
+  color: blue;
 }
 
 img {
@@ -2211,7 +2211,7 @@ div#googleMap {
 
 section.create-route {
   width: 100%;
-  margin-top: 5%;
+  padding: 2% 0;
 }
 
 .notification {
@@ -2230,8 +2230,21 @@ section.create-route {
 
 h4.h44 {
   font-size: 25px;
-  color: #8d6767;
-  font-weight: 500;
+  color: wheat;
+  font-weight: 700;
+}
+
+p.pp {
+  color: white;
+  font-size: 18px;
+  font-weight: 700;
+}
+
+p.label-her1,
+p.label-her2 {
+  font-weight: 700px;
+  font-size: 17px;
+  color: white;
 }
 
 form.cola-form,
@@ -2241,11 +2254,12 @@ form.coola-form {
 
 input.input-her1,
 input.input-her2 {
+  width: 90%;
+  height: 35px;
   outline: none;
   border: 1px solid pink;
-  width: 75%;
-  height: 50px;
-  font-size: 18px;
+  background-color: yellow;
+  font-weight: 700;
   color: blue;
   padding-left: 2%;
 }
@@ -2279,6 +2293,9 @@ i.fa.fa-calendar {
 div#display-flex,
 .display-flex {
   display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-bottom: 4%;
 }
 
 .schedule {
@@ -2302,18 +2319,21 @@ div#display-flex,
   height: 50px;
   outline: none;
   border: 2px solid pink;
-  background-color: #ffc0cb52;
+  background-color: yellowgreen;
   padding-left: 3%;
-  color: #334faf;
-  font-size: 16px;
+  color: blue;
+  font-weight: 700;
+  font-size: 18px;
 }
 
 .textarea {
   width: 97%;
-  height: 70px;
+  height: 95px;
   outline: none;
   border: 2px solid pink;
-  background-color: #ffebee;
+  background-color: yellowgreen;
+  font-size: 20px;
+  font-weight: 900;
   color: blue;
   resize: none;
 }
@@ -2325,32 +2345,34 @@ div#display-flex,
 }
 
 .notp {
-  font-size: 14px;
+  font-size: 17px;
+  font-weight: 700;
+  color: white;
 }
 
 .long {
   display: flex;
-  width: 20%;
-  height: 30px;
+  width: 35%;
+  height: 35px;
   justify-content: center;
   align-items: center;
-  background: #7ba8f9;
+  background: yellow;
   border: none;
-  color: white;
-  font-size: 17px;
+  color: blue;
+  font-size: 20px;
   border-radius: 5%;
   cursor: pointer;
   transition: 0.5s;
 }
 
 .long:hover {
-  background: #d32323;
-  color: white;
+  background: blue;
+  color: yellow !important;
 }
 
 section.deatilone {
-  margin-top: 2%;
   width: 100%;
+  border: solid 7px grey;
 }
 
 .detailtow {
@@ -2374,12 +2396,13 @@ section.deatilone {
 
 h1.h11 {
   margin-bottom: 2%;
+  color: white;
 }
 
 .span2012 {
   font-weight: 100;
-  font-size: 11px;
-  color: #686464;
+  font-size: 15px;
+  color: black;
 }
 
 .detalinn {
@@ -2387,7 +2410,7 @@ h1.h11 {
 }
 
 .deailnn {
-  width: 35%;
+  width: 70%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -2401,24 +2424,26 @@ h1.h11 {
 }
 
 a.themee-bbtn {
-  background-color: blueviolet;
-  color: #faebd7bf;
+  background-color: yellow;
+  color: blue;
   width: 30%;
-  height: 20px;
+  height: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 10%;
-  transition: 0.9s;
+  transition: 1.2s;
 }
 
 a.themee-bbtn:hover {
-  background-color: rgb(223, 16, 16);
+  background-color: blue;
+  color: yellow !important;
 }
 
-i.fa-regular.fa-heart,
-i.fa.fa-share-alt {
-  margin-right: 15%;
+svg.svg-inline--fa.fa-file-arrow-up,
+svg.svg-inline--fa.fa-share-nodes {
+  margin-right: 10%;
+  font-size: 20px;
 }
 
 .detalinn {
@@ -2426,9 +2451,23 @@ i.fa.fa-share-alt {
 }
 
 .deailn {
-  width: 90%;
+  width: 95%;
   display: flex;
   justify-content: space-between;
+}
+
+p.viewrz {
+  font-size: 18px;
+  line-height: 30px;
+  margin: 0;
+  font-weight: 400;
+  color: wheat;
+}
+
+a.themee-bbt {
+  color: yellowgreen;
+  font-size: 18px;
+  transition: 1.5s;
 }
 
 ul.detail-caro {
@@ -2465,15 +2504,24 @@ ul.detail-caro {
 }
 
 p.ppp {
-  color: white;
+  color: yellow;
   background-color: rgb(40 36 36 / 90%);
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 18px;
+}
+
+svg.svg-inline--fa.fa-rectangle-list {
+  color: yellowgreen;
+  font-size: 25px;
+  margin-right: 3%;
 }
 
 i.fa.fa-list-alt {
-  margin-right: 2%;
+  color: yellowgreen;
+  font-size: 25px;
+  margin-right: 3%;
 }
 
 .paragraph {
@@ -2483,12 +2531,13 @@ i.fa.fa-list-alt {
 h5.little-title {
   font-size: 25px;
   margin-bottom: 4%;
+  color: yellow;
 }
 
 p.lttlE-Title {
-  color: #9196a0;
+  color: white;
   display: block;
-  font-size: 14px;
+  font-size: 16px;
   margin-bottom: 2%;
 }
 
@@ -2496,6 +2545,8 @@ p.littlE-Title,
 p.litlE-Title {
   margin-bottom: 2%;
   font-family: auto;
+  color: wheat;
+  font-size: 20px;
 }
 
 .profile-list {
@@ -2505,7 +2556,9 @@ p.litlE-Title {
 
 li.complete,
 li.incomplete {
-  font-size: 16px;
+  font-size: 18px;
+  color: thistle;
+  font-weight: 700;
 }
 
 i.fa-regular.fa-circle-check {
@@ -2543,6 +2596,7 @@ ul.featurez {
   font-weight: 900;
 }
 
+
 .pppm {
   color: black;
   font-size: 17px;
@@ -2556,10 +2610,15 @@ ul.featurez {
 
 .feature-list li {
   display: inline-block;
-  font-size: 15px;
+  font-size: 18px;
   margin-bottom: 4%;
   width: 210px;
-  font-weight: 400;
+  font-weight: 700;
+  color: yellowgreen;
+}
+
+svg.svg-inline--fa.fa-circle-check {
+  color: white;
 }
 
 .feature-list i.fa-solid.fa-circle-check {
@@ -2577,8 +2636,17 @@ ul.featurez {
   padding: 2% 0%;
 }
 
-.reviewer figure {
+.styleiconclass {
+  color: #1c4dee;
+  font-size: 45px;
+}
+
+.reviewer li figure {
   padding: 0;
+}
+
+.reviewer li figure img {
+  border-radius: 100%;
 }
 
 .activity-meta {
@@ -2586,18 +2654,20 @@ ul.featurez {
 }
 
 .activity-meta p {
-  font-size: 14px;
+  font-size: 18px;
+  color: white;
 }
 
 a.stars-cars {
   display: inline-block;
-  width: 15%;
-  transition: 2s;
-  color: black;
+  width: 18%;
+  transition: 1.5s;
+  font-size: 18px;
+  color: blue;
 }
 
 a.stars-cars:hover {
-  color: rgb(238, 9, 9);
+  color: yellowgreen !important;
   text-decoration: underline;
 }
 
@@ -2613,8 +2683,7 @@ a.stars-cars:hover {
 }
 
 .dealtisex {
-  width: 90%;
-  margin-left: 5%;
+  width: 100%;
 }
 
 .DATANTIME {
@@ -2636,27 +2705,29 @@ input#party {
   height: 55px;
   width: 85%;
   background-color: yellowgreen;
-  color: white;
+  color: blue;
   font-size: 20px;
   padding: 0% 2%;
+  border-radius: 2.5rem;
 }
 
 a.theme {
-  background-color: #7ba8f9;
+  background-color: yellow;
+  color: blue;
   width: 100%;
   height: 55px;
-  border-radius: 10%;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 20px;
-  color: white;
-  transition: 0.8s;
+  font-size: 25px;
+  color: blue;
+  transition: 1.5s;
+  border-radius: 2.5rem;
 }
 
 a.theme:hover {
-  background-color: #f75f62;
-  color: white;
+  background-color: blue;
+  color: yellow !important;
 }
 
 span.validity {
@@ -2669,21 +2740,31 @@ span.validity {
   font-size: 25px;
   background-color: yellow;
   color: blue;
+  border-radius: 2.5rem;
 }
 
 p.pp21 {
   margin-bottom: 5%;
-  font-size: 20px;
+  font-size: 22px;
+  color: yellow;
 }
 
 span.span21 {
-  color: red;
+  color: blue;
+  font-size: 18px;
 }
 
 p.pp12 {
   margin-top: 9%;
   text-align: center;
-  font-size: 14px;
+  font-size: 18px;
+  font-weight: 700;
+  color: yellowgreen;
+}
+
+svg.svg-inline--fa.fa-circle-info {
+  color: white;
+  font-size: 19px;
 }
 
 .point-promo {
@@ -2693,11 +2774,13 @@ p.pp12 {
 p.em-p {
   margin-top: 5%;
   text-align: center;
-  font-size: 14px;
+  font-size: 17px;
+  font-weight: 700;
+  color: blue;
 }
 
 i.em {
-  color: red;
+  color: yellowgreen;
 }
 
 .owner-sec {
@@ -2719,11 +2802,18 @@ img.img-s {
   max-width: 170px;
   min-width: 170px;
   width: 170px;
+
 }
 
 i.i-img {
   position: absolute;
   left: 5%;
+}
+
+.styleiconI {
+  color: #1c4dee;
+  font-size: 50px;
+  background-color: darkgray;
 }
 
 span.span-em {
@@ -2733,7 +2823,7 @@ span.span-em {
   margin-top: 3%;
   line-height: 25px;
   font-size: 17px;
-
+  color: white;
 }
 
 ul.icons-fonte {
@@ -2746,67 +2836,84 @@ li.icon-fonte {
   margin-bottom: 12%;
 }
 
-i.far.fa-handshake,
-i.fas.fa-clock,
-i.fas.fa-calendar {
+#widthDivIcon,
+#widthDivIcons {
+  width: 35px;
   margin-right: 10%;
   display: table-cell;
   vertical-align: middle;
-  width: 32px;
-  font-size: 32px;
+}
+
+.styleiconlist {
+  font-size: 42px !important;
+  color: #1c4dee;
+}
+
+.owner-info {
+  width: 60%;
 }
 
 .owner-info>span {
   font-size: 20px;
-  font-weight: 600;
+  font-weight: 700;
+  color: white;
 }
 
 .owner-info>p {
-  color: #9196a0;
-  font-size: 14px;
+  color: yellow;
+  font-size: 18px;
   font-weight: 400;
   line-height: initial;
 }
 
 .owner-detail {
   border-top: 1px solid pink;
-  width: 90%;
-  margin-left: 5%;
+  width: 100%;
   margin-top: 6%;
 }
 
 ul.verificatio {
-  margin: 5% 0% 6% 0%;
   line-height: 35px;
-  color: #9196a0;
 }
 
-i.fas.fa-globe-europe,
-i.far.fa-check-circle {
-  margin-right: 5%;
+ul.verificatio li {
+  color: blanchedalmond;
+  font-size: 18px;
+  font-weight: 700;
+  margin: 2% 0% 2% 0%;
+}
+
+.stylelisticon {
+  margin-right: 2.5%;
+  font-size: 25px;
+  color: yellow !important;
 }
 
 .owner-detail>p {
-  display: inline-block;
-  font-size: 14px;
-  line-height: 24px;
-  padding-bottom: 23px;
+  color: wheat;
   width: 100%;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 29px;
+  padding-bottom: 23px;
 }
 
 .owner-detail>a {
+  width: 35%;
+  height: 35px;
   border-radius: 5px;
-  display: inline-block;
-  font-size: 15px;
-  padding: 8px 20px;
-  background: #7ba8f9;
-  color: #fff;
-  transition: 0.8s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  background: yellow;
+  color: blue;
+  transition: 1.5s;
 }
 
 .owner-detail>a:hover {
-  background: #f75f62;
-  color: #fff;
+  background: blue;
+  color: yellow !important;
 }
 
 /* 
@@ -3282,7 +3389,7 @@ span#spicals {
   color: white;
 }
 
-span#spicals{
+span#spicals {
   color: yellow;
 }
 
